refactor(WordFrequency): mix initWordList to getWordListMap