@@ -4,13 +4,12 @@ import java.util.stream.Collectors;
 public class WordFrequencyGame {
     public String getResult(String inputStr){
         String[] words = inputStr.split("\\s+");
-        if (words.length==1) {
+        if (words.length == 1) {
             return inputStr + " 1";
         } else {
             try {
-                List<WordDetail> wordList = initWordList(words);
-                Map<String, List<WordDetail>> wordListmap = getWordListMap(wordList);
-                wordList = getWordList(wordListmap);
+                Map<String, List<WordDetail>> wordListmap = getWordListMap(words);
+                List<WordDetail> wordList = getWordList(wordListmap);
                 wordList.sort((word1, word2) -> word2.getCount() - word1.getCount());
                 return buildResult(wordList);
             } catch (Exception e) {
@@ -26,22 +25,16 @@ public class WordFrequencyGame {
     }
 
     private List<WordDetail> getWordList(Map<String, List<WordDetail>> wordListmap) {
-        List<WordDetail> wordlist = wordListmap.entrySet().stream()
+        return wordListmap.entrySet().stream()
                 .map(entry -> new WordDetail(entry.getKey(), entry.getValue().size()))
                 .collect(Collectors.toList());
-        return wordlist;
     }
 
-    private Map<String,List<WordDetail>> getWordListMap(List<WordDetail> wordList) {
-        Map<String, List<WordDetail>> wordListmap = wordList.stream()
-                .collect(Collectors.groupingBy(WordDetail::getWord));
-        return wordListmap;
-    }
-
-    private List<WordDetail> initWordList(String[] inputArr){
-        List<WordDetail> wordList = Arrays.stream(inputArr)
+    private Map<String,List<WordDetail>> getWordListMap(String[] words) {
+        List<WordDetail> wordList = Arrays.stream(words)
                 .map(word -> new WordDetail(word, 1))
-                .collect(Collectors.toList());
-        return wordList;
+                .toList();
+        return wordList.stream()
+                .collect(Collectors.groupingBy(WordDetail::getWord));
     }
 }
